@@ -1,3 +1,0 @@
-declare f as throw function
-        ^
-9: error: "throw" not supported since C++17; did you mean "noexcept"?
