@@ -50,6 +50,10 @@ Help for new-style casts has been folded into the same line for C-style casts.
 Added command-line options to set stdout to unbuffered.  (This is useful to
 print output immediately while single-stepping in a debugger.)
 
+** `non-throwing`
+Previously, `non-throwing` always means `throw()`.  Now, the meaning changes
+based on the current language: if it's C++11 or later, it means `noexcept`.
+
 ** `type` in `define`
 **cdecl** now allows the word `type` to appear in a `define` command, e.g.:
 
